updated-k8s-packages-version

--- a/ansible/k8s-ha-ansible/roles/k8s-ha-ansible/tasks/01_haproxy_keepalived.yaml
+++ b/ansible/k8s-ha-ansible/roles/k8s-ha-ansible/tasks/01_haproxy_keepalived.yaml
@@ -1,4 +1,9 @@
 - block:
+    - name: update all packages
+      become: true
+      when: inventory_hostname in ((groups['master_servers'] + groups['worker_servers']) | unique )
+      yum: name=* state=latest
+
     - name: Install Packages on both workers and masters
       become: true
       when: inventory_hostname in ((groups['master_servers'] + groups['worker_servers']) | unique ) 
