--- a/ansible/k8s-ha-ansible/roles/k8s-ha-ansible/tasks/02_nodes_preparation.yaml
+++ b/ansible/k8s-ha-ansible/roles/k8s-ha-ansible/tasks/02_nodes_preparation.yaml
@@ -146,10 +146,10 @@
         block: |
           [kubernetes]
           name=Kubernetes
-          baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-$basearch
+          baseurl=https://pkgs.k8s.io/core:/stable:/v{{ kubernetes_rpm_version }}/rpm/
           enabled=1
           gpgcheck=1
-          gpgkey=https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+          gpgkey=https://pkgs.k8s.io/core:/stable:/v{{ kubernetes_rpm_version }}/rpm/repodata/repomd.xml.key
         create: yes
 
     - name: Add repository for containerd
